first text files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Dave Albert</title>
+</head>
+<body>
+   <p> Hi my main site is at: https://dave-albert.com </p>
+
+   <p>My company site starts at: https://one15.co</p>
+
+   <p>My text files: https://davealbert.github.io/textfiles/</p>
+</body>
+</html>
+
+
