--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<title>Dave Albert</title>
 </head>
 <body>
-   <p> Hi my main site is at: https://dave-albert.com </p>
+   <p> Hi my main site is at: <a href="https://dave-albert.com">https://dave-albert.com</a> </p>
 
-   <p>My company site starts at: https://one15.co</p>
+   <p>My company site starts at: <a href=" https://one15.co">https://one15.co</a></p>
 
-   <p>My text files: https://davealbert.github.io/textfiles/</p>
+   <p>My text files: <a href="https://davealbert.github.io/textfiles/">https://davealbert.github.io/textfiles/</a></p>
 </body>
 </html>
 
