fix typo, and update index script

--- a/textfiles/index.html
+++ b/textfiles/index.html
@@ -1,4 +1,5 @@
-
-<a href="./nothing.txt">./nothing.txt</a>
-<a href="./null.txt">./null.txt</a>
-<a href="./wtf-faq.txt">./wtf-faq.txt</a>
+<html><body>
+<a href="./nothing.txt">./nothing.txt</a><br />
+<a href="./null.txt">./null.txt</a><br />
+<a href="./wtf-faq.txt">./wtf-faq.txt</a><br />
+</body></html>
