added date to index script

--- a/textfiles/index.html
+++ b/textfiles/index.html
@@ -1,4 +1,6 @@
 <html><body>
+Fri  4 Aug 2017 17:55:24 IST
+<br /><br />
 <a href="./nothing.txt">./nothing.txt</a><br />
 <a href="./null.txt">./null.txt</a><br />
 <a href="./wtf-faq.txt">./wtf-faq.txt</a><br />
