Adding vim to index

--- a/textfiles/index.html
+++ b/textfiles/index.html
@@ -1,7 +1,8 @@
 <html><body>
-Fri  4 Aug 2017 17:55:24 IST
+Sat  5 Aug 2017 07:30:51 IST
 <br /><br />
 <a href="./nothing.txt">./nothing.txt</a><br />
 <a href="./null.txt">./null.txt</a><br />
+<a href="./vim-tips.txt">./vim-tips.txt</a><br />
 <a href="./wtf-faq.txt">./wtf-faq.txt</a><br />
 </body></html>
