add tech stack, hiring and about to index

--- a/textfiles/index.html
+++ b/textfiles/index.html
@@ -1,8 +1,11 @@
 <html><body>
-Sat  5 Aug 2017 07:30:51 IST
+Sat  5 Aug 2017 20:18:27 IST
 <br /><br />
+<a href="./about-me.txt">./about-me.txt</a><br />
+<a href="./hiring-tips.txt">./hiring-tips.txt</a><br />
 <a href="./nothing.txt">./nothing.txt</a><br />
 <a href="./null.txt">./null.txt</a><br />
+<a href="./tech-stack.txt">./tech-stack.txt</a><br />
 <a href="./vim-tips.txt">./vim-tips.txt</a><br />
 <a href="./wtf-faq.txt">./wtf-faq.txt</a><br />
 </body></html>
