python make_index.py better formatting

--- a/textfiles/index.html
+++ b/textfiles/index.html
@@ -1,12 +1,16 @@
 <html><body>
-Sun  6 Aug 2017 05:31:17 IST
-<br /><br />
-<a href="./about-me.txt">./about-me.txt</a><br />
-<a href="./hiring-tips.txt">./hiring-tips.txt</a><br />
-<a href="./nothing.txt">./nothing.txt</a><br />
-<a href="./null.txt">./null.txt</a><br />
-<a href="./tech-stack.txt">./tech-stack.txt</a><br />
-<a href="./vim-tips.txt">./vim-tips.txt</a><br />
-<a href="./wtf-faq.txt">./wtf-faq.txt</a><br />
-<a href="./xcode-tips.txt">./xcode-tips.txt</a><br />
+<style> td { padding-left: 20px; } .right { text-align: right;} </style>
+<p><i>Last updated: Sun Aug  6 09:20:54 2017</i></p>
+
+<table style="">
+<tr><td><b>Name</b></td><td><b>Size</b></td><td><b>Modified</b></td></tr>
+<tr><td><a href="about-me.txt">about-me.txt<a></td><td class="right">1035B</td><td>Sun Aug  6 05:26:39 2017</td></tr>
+<tr><td><a href="hiring-tips.txt">hiring-tips.txt<a></td><td class="right">1909B</td><td>Sun Aug  6 05:26:39 2017</td></tr>
+<tr><td><a href="nothing.txt">nothing.txt<a></td><td class="right">21B</td><td>Fri Aug  4 16:02:30 2017</td></tr>
+<tr><td><a href="null.txt">null.txt<a></td><td class="right">0B</td><td>Fri Aug  4 15:51:06 2017</td></tr>
+<tr><td><a href="tech-stack.txt">tech-stack.txt<a></td><td class="right">1913B</td><td>Sun Aug  6 05:26:39 2017</td></tr>
+<tr><td><a href="vim-tips.txt">vim-tips.txt<a></td><td class="right">956B</td><td>Sun Aug  6 05:26:39 2017</td></tr>
+<tr><td><a href="wtf-faq.txt">wtf-faq.txt<a></td><td class="right">863B</td><td>Sat Aug  5 07:04:33 2017</td></tr>
+<tr><td><a href="xcode-tips.txt">xcode-tips.txt<a></td><td class="right">859B</td><td>Sun Aug  6 08:26:17 2017</td></tr>
+</table>
 </body></html>
