--- a/textfiles/index.html
+++ b/textfiles/index.html
@@ -1,10 +1,11 @@
 <html><body>
 <style> td { padding-left: 20px; } .right { text-align: right;} </style>
-<p><i>Last updated: Sun Aug  6 09:42:54 2017</i></p>
+<p><i>Last updated: Tue Aug  8 10:18:59 2017</i></p>
 
 <table style="">
 <tr><td><b>Name</b></td><td><b>Size</b></td><td><b>Modified</b></td></tr>
 <tr><td><a href="about-me.txt">about-me.txt<a></td><td class="right">1035B</td><td>Sun Aug  6 09:41:35 2017</td></tr>
+<tr><td><a href="focus.txt">focus.txt<a></td><td class="right">1791B</td><td>Tue Aug  8 10:18:50 2017</td></tr>
 <tr><td><a href="gnu-parallel.txt">gnu-parallel.txt<a></td><td class="right">950B</td><td>Sun Aug  6 09:42:09 2017</td></tr>
 <tr><td><a href="hiring-tips.txt">hiring-tips.txt<a></td><td class="right">1909B</td><td>Sun Aug  6 09:42:03 2017</td></tr>
 <tr><td><a href="nothing.txt">nothing.txt<a></td><td class="right">21B</td><td>Sun Aug  6 09:42:14 2017</td></tr>
