--- a/textfiles/index.html
+++ b/textfiles/index.html
@@ -1,6 +1,6 @@
 <html><body>
 <style> td { padding-left: 20px; } .right { text-align: right;} </style>
-<p><i>Last updated: Tue Aug  8 13:08:04 2017</i></p>
+<p><i>Last updated: Tue Aug  8 16:30:18 2017</i></p>
 
 <table style="">
 <tr><td><b>Name</b></td><td><b>Size</b></td><td><b>Modified</b></td></tr>
@@ -10,10 +10,10 @@
 <tr><td><a href="hiring-tips.txt">hiring-tips.txt<a></td><td class="right">1934B</td><td>Tue Aug  8 13:05:49 2017</td></tr>
 <tr><td><a href="nothing.txt">nothing.txt<a></td><td class="right">21B</td><td>Sun Aug  6 09:42:14 2017</td></tr>
 <tr><td><a href="null.txt">null.txt<a></td><td class="right">0B</td><td>Sun Aug  6 09:42:17 2017</td></tr>
-<tr><td><a href="old-sckool-twitter.txt">old-sckool-twitter.txt<a></td><td class="right">1661B</td><td>Tue Aug  8 13:07:41 2017</td></tr>
+<tr><td><a href="old-skool-twitter.txt">old-skool-twitter.txt<a></td><td class="right">2040B</td><td>Tue Aug  8 16:06:39 2017</td></tr>
 <tr><td><a href="tech-stack.txt">tech-stack.txt<a></td><td class="right">1946B</td><td>Tue Aug  8 13:06:01 2017</td></tr>
 <tr><td><a href="vim-tips.txt">vim-tips.txt<a></td><td class="right">1008B</td><td>Tue Aug  8 13:06:06 2017</td></tr>
 <tr><td><a href="wtf-faq.txt">wtf-faq.txt<a></td><td class="right">888B</td><td>Tue Aug  8 13:06:12 2017</td></tr>
-<tr><td><a href="xcode-tips.txt">xcode-tips.txt<a></td><td class="right">892B</td><td>Tue Aug  8 13:06:15 2017</td></tr>
+<tr><td><a href="xcode-tips.txt">xcode-tips.txt<a></td><td class="right">972B</td><td>Tue Aug  8 15:28:32 2017</td></tr>
 </table>
 </body></html>
