--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Dave Albert</title>
-</head>
-<body>
-   <p> Hi my main site is at: <a href="https://dave-albert.com">https://dave-albert.com</a> </p>
+    <head>
+        <meta charset="UTF-8">
+        <title>Dave Albert</title>
+    </head>
+    <body>
+        <p> Hi my main site is at: <a href="https://dave-albert.com">https://dave-albert.com</a> </p>
 
-   <p>My company site starts at: <a href=" https://one15.co">https://one15.co</a></p>
+        <p>My company site starts at: <a href=" https://one15.co">https://one15.co</a></p>
 
-   <p>My text files: <a href="https://davealbert.github.io/textfiles/">https://davealbert.github.io/textfiles/</a></p>
-</body>
+        <p>My text files: <a href="https://davealbert.github.io/textfiles/">https://davealbert.github.io/textfiles/</a></p>
+
+        <div>Visits to this site: <span id="counter">???</span> <i>90's stlye</i> :P</div>
+
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+        <script type="text/javascript" charset="utf-8">
+
+$(() => {
+    $.ajax('https://9u0gb30id0.execute-api.eu-west-1.amazonaws.com/Prod/counter?site=davealberttext')
+        .done((res) => {
+            console.log(res);
+            $('#counter').html(res);
+        });
+});
+
+        </script>
+    </body>
 </html>
 
 
