--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <p>My text files: <a href="https://davealbert.github.io/textfiles/">https://davealbert.github.io/textfiles/</a></p>
 
-        <div>Visits to this site: <span id="counter">???</span> <i>90's stlye</i> :P</div>
+        <div>Visits to this site: <span style="font-weight: bold;" id="counter">???</span> -- <i>90's stlye</i> :P</div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
