--- a/index.html
+++ b/index.html
@@ -14,18 +14,8 @@
         <div>Visits to this site: <span style="font-weight: bold;" id="counter">???</span> -- <i>90's stlye</i> :P</div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="./main.js"></script>
 
-        <script type="text/javascript" charset="utf-8">
-
-$(() => {
-    $.ajax('https://9u0gb30id0.execute-api.eu-west-1.amazonaws.com/Prod/counter?site=davealberttext')
-        .done((res) => {
-            console.log(res);
-            $('#counter').html(res);
-        });
-});
-
-        </script>
     </body>
 </html>
 
