--- a/jek/index.html
+++ b/jek/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Dave&#39;s Tech Ramblings</title>
-  <meta name="description" content="Hi I&#39;m dave albert the CTO of [One15](https://one15.co). I love all thing dev and ops.">
+  <meta name="description" content="Hi I&#39;m dave albert the CTO of https://one15.co . I love all thing dev and ops.">
 
   <link rel="stylesheet" href="/jek/assets/main.css">
   <link rel="canonical" href="/jek/">
@@ -125,7 +125,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>Hi I&#39;m dave albert the CTO of [One15](https://one15.co). I love all thing dev and ops.
+        <p>Hi I&#39;m dave albert the CTO of https://one15.co . I love all thing dev and ops.
 </p>
       </div>
     </div>
