working custom site unstyled.

--- a/jek/contact/index.html
+++ b/jek/contact/index.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Dave's Tech Ramblings</title>
+	<title>Contact</title>
 
 	<link rel="stylesheet" href="http://127.0.0.1:4000/jek/css/normalize.css">
 	<link rel="stylesheet" href="http://127.0.0.1:4000/jek/assets/main.css">
-	<link rel="canonical" href="http://127.0.0.1:4000/jek/">
+	<link rel="canonical" href="http://127.0.0.1:4000/jek/contact/">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,600' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
 
@@ -46,9 +46,11 @@
 </header>
 	<main>
 		<article>
-			<h2>Main Page</h2>
+			<h2>Contact</h2>
+   
+    <p>Contact content goes here.</p>
 
-<p>Main content goes here.</p>
+<p>My e-mail is <a href="mailto:blog@dave-albert.com">blog@dave-albert.com</a>.</p>
 
 		</article>
 		<footer class="site-footer">
