--- a/jek/index.html
+++ b/jek/index.html
@@ -46,9 +46,18 @@
 </header>
 	<main>
 		<article>
-			<h2>Main Page</h2>
+			<p> Hi my main site is at: <a href="/jek">https://dave-albert.com</a> </p>
 
-<p>Main content goes here.</p>
+<p>My company site starts at: <a href=" https://one15.co">https://one15.co</a></p>
+
+<p>My text files: <a href="https://davealbert.github.io/textfiles/">https://davealbert.github.io/textfiles/</a></p>
+
+<div>Visits to this site: <span style="font-weight: bold;" id="counter">???</span> -- <i>90's stlye</i> :P</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+<script src="./main.js"></script>
+
 
 		</article>
 		<footer class="site-footer">
