--- a/vue/index.html
+++ b/vue/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learn Vue</title>
-    
 </head>
 <body>    
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="./vue.js"></script>
     <div id="app">
         {{ message }}
     </div>    
