--- a/vue/index.html
+++ b/vue/index.html
@@ -5,13 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learn Vue</title>
-    
+
 </head>
-<body>    
+<body>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <div id="app">
-        {{ message }}
-    </div>    
+        <ol>
+            <!--
+                Now we provide each todo-item with the todo object
+                it's representing, so that its content can be dynamic.
+                We also need to provide each component with a "key",
+                which will be explained later.
+            -->
+            <todo-item
+             v-for="item in arr"
+             v-bind:todo="item"
+             v-bind:thing="item.id + 5"
+             v-bind:key="item.id">
+            </todo-item>
+        </ol>
+    </div>
     <script src="./my-vue.js"></script>
 </body>
 </html>
